publish: Uncomment CCXT link and update link URL
generated from commit f5930cbc4344176c5fddf10cbb2a55763d64cff1

--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
                   <li>
                     <a href="#python-client" class="toc-h2 toc-link" data-title="Python Client">Python Client</a>
                   </li>
+                  <li>
+                    <a href="#cryptocurrency-exchange-trading-library" class="toc-h2 toc-link" data-title="CryptoCurrency eXchange Trading Library">CryptoCurrency eXchange Trading Library</a>
+                  </li>
               </ul>
           </li>
           <li>
@@ -370,11 +373,8 @@
 </aside>
 <h1 id='client-libraries'>Client Libraries</h1><h3 id='python-client'>Python Client</h3>
 <p>We provide a <a href="https://github.com/qtrade-exchange/qtrade-py-client">Python client</a> for our API.  This client offers helper functions, convenient response formatting, and automatic rate limit waiting to make developing applications with our API as efficient as possible.</p>
-
-<!---
-### CryptoCurrency eXchange Trading Library
-Our API is also supported by [CCXT](https://github.com/ccxt/ccxt), a JavaScript / Python / PHP cryptocurrency trading API with support for over 120 exchanges.
--->
+<h3 id='cryptocurrency-exchange-trading-library'>CryptoCurrency eXchange Trading Library</h3>
+<p>Our API is also supported by <a href="https://ccxt.trade">CCXT</a>, a JavaScript / Python / PHP cryptocurrency trading API with support for over 120 exchanges.</p>
 <h1 id='vocabulary'>Vocabulary</h1>
 <p>Here is how we define the terms used in our documentation and API:</p>
 
